--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,26 +9,12 @@ jobs:
     name: Deploy docs
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout master
-        uses: actions/checkout@v1
-      
-      - uses: actions/setup-python@v2
-
-      - name: Build Docs
-        run: bin/build.sh
+      - name: Checkout main
+        uses: actions/checkout@v2
 
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
-      - uses: montudor/action-zip@v0.1.0
-        with:
-          args: zip -qq -r ./site.zip ./site
-          
-      - name: Upload a Build Artifact
-        uses: actions/upload-artifact@v2.1.4
-        with:
-          name: build-$GITHUB_SHA
-          # A file, directory or wildcard pattern that describes what to upload
-          path: site.gz
+          CONFIG_FILE: mkdocs.yml
+          REQUIREMENTS: requirements.txt
