--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-mdx-truly-sane-lists==1.2
-mkdocs==1.1.2
-mkdocs-material==5.5.11
-pymdown-extensions>=7.0
-mkdocs-material-extensions>=1.0
+mdx-truly-sane-lists
+mkdocs
+mkdocs-material
+pymdown-extensions
+mkdocs-material-extensions
